# common

./: Cargo.toml  hilo.py
src/: comm.rs  lib.rs
src/comm/: gui.rs  sam.rs
src/sequence/: device.rs  func.rs  mod.rs  unit.rs
tests/: sequences.rs
