[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
jeflog = "0.1.0"
postcard = "^1"
pyo3 = "0.20.2"
rusqlite = { version = "0.30", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"

[dev-dependencies]
postcard = { version = "^1", features = ["alloc"] }

[features]
sequences = ["dep:pyo3"]
