[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
jeflog = "0.1.0"
postcard = "^1"
pyo3 = { version = "0.20", optional = true }
rusqlite = { version = "0.30", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"

[dev-dependencies]
postcard = { version = "^1", features = ["alloc"] }

[features]
sequences = ["dep:pyo3"]
